2007-09-25  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/waterfall.py
	(WaterfallStatusResource.body.with_args): don't use req.URLPath,
	it gives us absolute paths that break proxies
	* buildbot/status/web/base.py (HtmlResource.path_to_root): fix
	this, it was giving bad results when the Waterfall is behind a
	reverse proxy.

	* buildbot/scripts/runner.py (upgradeMaster): first phase of the
	new 'upgrade-master' command, which will bring an old buildmaster
	directory up-to-date. Right now the only thing it does is populate
	public_html/ if it wasn't already there. Still to do: check the
	other files, add documentation.
	* buildbot/test/test_runner.py (Create.testUpgradeMaster): test it
	(Create.failUnlessSameFiles): use sets.Set() for 2.3 compatibility

2007-08-13  Brian Warner  <warner@lothar.com>

	* buildbot/changes/changes.py (Change.get_HTML_box): add a tooltip
	that contains the checkin comments when you hover over the entry
	in the 'changes' column of the waterfall. Thanks to Frederic Leroy
	for the patch.

	* buildbot/status/web/waterfall.py (WaterfallStatusResource): improve
	'help' page linkage

	* buildbot/status/web/about.py (AboutBuildbot): add an 'about'
	page with versions of python, buildbot, and twisted
	* buildbot/status/web/baseweb.py (WebStatus.setupUsualPages): same
	* buildbot/status/web/index.html: add links to most pages
	* docs/buildbot.texinfo (Buildbot Web Resources): update docs

	* buildbot/status/web/robots.txt: put a robots.txt in new installs
	which discourages robot access to all large dynamically-generated
	pages. The intention is that the index page and the 'about' page
	are the only ones which should be crawlable.
	* buildbot/scripts/runner.py (Maker.public_html): same
	(createMaster): same
	* setup.py: ship index.html and robots.txt in source distributions

	* buildbot/status/web/waterfall.py: add 'refresh' query arg, to
	activate automatic reloading of the page (using a meta Refresh:
	tag). Closes #69.